docs: Fix code color regression and contrast issue
The code color var was changed to a new var when updated to
VitePress v1.0.0-rc.25 in I4218dcd6ea70fa6ff8eca3b1cd24a98e4f291983.
Let's ensure that we're using the correct – emphasized – color value.
Tokens presentation is one of the places where we use this color.
Also changing the language tag color to inverted in order to fulfill
contrast requirements.

Bug: T354759

--- a/packages/codex-docs/docs/.vitepress/theme/custom.css
+++ b/packages/codex-docs/docs/.vitepress/theme/custom.css
@@ -8,7 +8,8 @@
 	--vp-code-block-color: rgba( 255, 255, 245, 0.86 );
 	--vp-code-block-bg: #292b30;
 	--vp-code-block-divider-color: #000;
-	--vp-code-lang-color: rgba( 235, 235, 245, 0.38 );
+	--vp-code-color: var( --color-emphasized );
+	--vp-code-lang-color: var( --color-inverted );
 	--vp-code-tab-text-color: rgba( 235, 235, 245, 0.6 );
 	--vp-code-tab-hover-text-color: rgba( 255, 255, 245, 0.86 );
 	--vp-code-tab-active-text-color: rgba( 255, 255, 245, 0.86 );
